--- a/templates/login.html
+++ b/templates/login.html
@@ -155,32 +155,30 @@
       </form>
     </div>
 
-    <!-- 하단 링크 -->
-    <div class="text-center mt-4 small">
-      <a href="{{ url_for('index') }}" class="text-secondary text-decoration-none d-block mb-2">
-        ← 메인으로 돌아가기
-      </a>
+    {# ===== 카드 바깥 하단 링크 (회원가입 화면에서는 숨김) ===== #}
+    <div class="text-center mt-4 small mb-4">
+      {% if mode != 'register' %}
+        <a href="{{ url_for('index') }}" class="text-secondary text-decoration-none d-block mb-2">
+          ← 메인으로 돌아가기
+        </a>
+      {% endif %}
 
       {% if mode == 'login' %}
         <a href="{{ url_for('register') }}" class="text-primary text-decoration-none me-2">
           회원가입 하기
         </a>
-        <a href="{{ url_for('admin_login') }}" class="text-secondary text-decoration-none">
+        <a href "{{ url_for('admin_login') }}" class="text-secondary text-decoration-none">
           관리자 로그인
         </a>
       {% elif mode == 'register' %}
-        <a href="{{ url_for('login') }}" class="text-secondary text-decoration-none me-2">
-          로그인으로 돌아가기
-        </a>
-        <a href="{{ url_for('admin_login') }}" class="text-secondary text-decoration-none">
-          관리자 로그인
-        </a>
+        {# 회원가입 화면에서는 여기 링크 숨김 (풋터에 이미 있음) #}
       {% elif mode == 'admin' %}
         <a href="{{ url_for('login') }}" class="text-secondary text-decoration-none">
           일반 사용자 로그인
         </a>
       {% endif %}
     </div>
+
   </div>
 </div>
 
